# manim-code-anim

./: .gitignore  README.md  main.py  pyproject.toml
src/manim_code_anim/: code_anim.py  language_colors.py
tests/: test_code_anim.py
